# historical-war-sim

./: .env.example  .gitignore  README.md  docker-compose.yml
.agents/workflows/: session-end.md  session-start.md
backend/: Dockerfile  list_routes.py  pyproject.toml  stress_test_10k.py  test_db.py  test_los.py  test_terrain.py  test_what_if.py  test_ws.py  verify_payload.py
backend/app/: config.py  main.py
backend/app/ai/: strategic_advisor.py
backend/app/campaign/: manager.py
backend/app/data/: historical_fetcher.py
backend/app/db/: migrations_phase5.py  migrations_phase6.py  seed_campaign.py  verify_phase5.py  verify_phase6.py
backend/app/services/: event_dispatcher.py
backend/app/simulation/: agents.py  engine.py  environment.py  monte_carlo.py  terrain.py  ue5_exporter.py
backend/data/terrain/: a1b2c3d4-1111-4444-aaaa-000000000001_elevation.tif
backend/scripts/: import_battle.py
db/postgres/: 01_schema.sql  02_seed.sql  02_seed_gettysburg.sql
docs/brain/: UNREAL_ENGINE_5_INSTALLATION_AND_CONNECTION_GUIDE.md  implementation_plan.md  readiness_audit.md  task.md  walkthrough.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/public/battle-templates/: manifest.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/campaign/: page.tsx
frontend/src/components/map/: BattleMap.tsx  CampaignMap.tsx
frontend/src/store/: simStore.ts
tools/: sync_progress.py
tools/unreal_bridge/: WarSimWebSocketClient.cpp  WarSimWebSocketClient.h  coordinate_sync.py
(+3 files in other folders)
